--- a/LF-Sonar/sonarqube/test-projects/multi-module-issues-project/pom.xml
+++ b/LF-Sonar/sonarqube/test-projects/multi-module-issues-project/pom.xml
@@ -17,4 +17,10 @@
     <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+  <build>
+    <plugins>
+
+    </plugins>
+  </build>
 </project>
