get image from bitnamilegacy repo

--- a/tools/deployments/appuio/sonarqube/values.yaml
+++ b/tools/deployments/appuio/sonarqube/values.yaml
@@ -55,6 +55,12 @@ sonarqube:
       ephemeral-storage: 150Mi
 
   postgresql:
+    image:
+      registry: docker.io
+      repository: bitnamilegacy/postgresql
+      tag: 11.14.0-debian-10-r22
+      pullSecrets:
+        - docker-config
     global:
       imagePullSecrets:
         - docker-config
